<resources>
    <string name="app_name">Escape This Quiz</string>
    <string name="instructions">What is this game?</string>
    <string name="instruction_text">An escape room is a physical adventure game in which players solve a series of puzzles and riddles using clues, hints and strategy to complete the objectives at hand. Players are given a set time limit to unveil the secret plot which is hidden within the rooms. \nYou will be playing an escape-style quiz, with no back button. Find your way out!</string>
    <string name="button_start">Start</string>
    <string name="result">Your result is</string>
    <string name="result_game">0 out of 7</string>
    <string name="title_activity_quiz_card">Quiz</string>
    <string name="main_name">Enter your name to start</string>
    <string name="text1">Question 1/7</string>
    <string name="text2">Question 2/7</string>
    <string name="text3">Question 3/7</string>
    <string name="text4">Question 4/7</string>
    <string name="text5">Question 5/7</string>
    <string name="text6">Question 6/7</string>
    <string name="text7">Question 7/7</string>
    <string name="question1">Solve the cryptogram</string>
    <string name="question2">Solve the equation</string>
    <string name="question3">Find the values</string>
    <string name="question4">What is this?</string>
    <string name="question5">Find the word</string>
    <string name="question6">Open the padlock</string>
    <string name="question7">Find the right pieces</string>
    <string name="answer11">And into the forest I go, to lose my mind and find my soul</string>
    <string name="answer12">You have to escape to survive, as you must survive to escape</string>
    <string name="answer13">Eat, sleep, play escape</string>
    <string name="answer14">We didn\'t lose the game: we just ran out of time</string>
    <string name="answer21">3</string>
    <string name="answer22">15</string>
    <string name="answer23">70</string>
    <string name="answer24">25</string>
    <string name="answer31">12, 13, 12</string>
    <string name="answer32">12, 12, 27</string>
    <string name="answer33">1, 1, 2</string>
    <string name="answer34">0, 0, 1</string>
    <string name="answer41">An awesome quiz</string>
    <string name="answer42">A beautiful elephant</string>
    <string name="answer43">The best day ever</string>
    <string name="answer44">A butterfly</string>
    <string name="answer51">Escape</string>
    <string name="answer52">Dragon</string>
    <string name="answer53">Mirror</string>
    <string name="answer54">Mrtasc</string>
    <string name="answer6">Enter the right combination with no spaces</string>
    <string name="answer71">Piece 1</string>
    <string name="answer72">Piece 2</string>
    <string name="answer73">Piece 3</string>
    <string name="answer74"> Piece 4</string>
    <string name="button_Back">Back</string>
    <string name="button_Next">Next</string>
    <string name="button_Submit">Submit</string>
    <string name="button_share">Share</string>
    <string name="result_title">Your Result is</string>
    <string name="result_outOf">out of</string>
    <string name="result_totalQuestions">7</string>
    <string name="button_restart">Restart</string>
    <string name="button_quit">Quit</string>
    <string name="button_quitMain">Quit, it\'s too hard for me</string>
    <string name="toast_win">you beat the Quiz!</string>
    <string name="toast_lose">the Quiz beat you!</string>
    <string name="toast_noBack">You cannot escape!\n Your only choice is to look forward.</string>
</resources>
