<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/margin"
    tools:context="com.sardegnaisoladicavalli.escapethisquiz.QuizCard07">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/card_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/text5"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:src="@drawable/mirror" />


        <TextView
            android:id="@+id/card_question"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/question5"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/card_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer71" />

        <CheckBox
            android:id="@+id/card_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer72" />

        <CheckBox
            android:id="@+id/card_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer73" />

        <CheckBox
            android:id="@+id/card_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer74" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/button_Back"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="onSubmitButtonClicked"
                android:text="@string/button_Submit"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/button_Next"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>