<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.sardegnaisoladicavalli.escapethisquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:fillViewport="true"
        android:padding="@dimen/padding"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="@dimen/big_title_font_size" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/dragon" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/main_name"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/title_font_size" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/button_start"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="startQuiz"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/instructions"
            android:textSize="@dimen/title_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/instruction_text" />

        <Button
            android:id="@+id/button_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:padding="@dimen/padding"
            android:text="@string/button_quitMain"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</ScrollView>
