<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:cardCornerRadius="@dimen/margin"
    android:orientation="vertical"
    tools:context="com.sardegnaisoladicavalli.escapethisquiz.QuizCard06"
    android:layout_margin="@dimen/margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">


        <TextView
            android:id="@+id/card_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text6"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@color/colorAccent"
            android:src="@drawable/padlock"/>


        <TextView
            android:id="@+id/card_question"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/question6"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/padlock_comb"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:hint="@string/answer6"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">

            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/button_Back"
                android:layout_marginRight="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/button_Submit"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center"
                android:text="@string/button_Next"
                android:onClick="onNextButtonClicked"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

